--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,21 +1,17 @@
-name: Node CI
+name: CI-CD
 
-on: [push]
-
+on: [ push ]
+		
 jobs:
-  build:
 
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: yarn install
-    - run: yarn test
+	test_pull_request:
+	
+		runs_on: ubuntu-latest
+		steps:
+		- uses: actions/checkout@v2
+		- uses: actions/setup-node@v1
+			with:
+				node-version: 12
+		- run: npm ci
+		- run: npm test
+		- run: npm run build
