--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,6 +34,7 @@ jobs:
     - name: FTP-Deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
+        local-dir: wwwroot/
         ftp-server: ftp://ftp.apps.nigelgoss.co.uk/minesweeper/
         ftp-username: apps.nigelgoss.co.uk
         ftp-password: ${{ secrets.FTP_PASSWORD }}
