--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
     "jest": "^25.1.0",
     "puppeteer": "^2.1.1",
     "jest-puppeteer": "^4.4.0",
-  "pixelmatch": "^5.1.0",
+    "pixelmatch": "^5.1.0"
   }
 }
