--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -4,8 +4,22 @@ on: [push]
 
 jobs:
   
+  Dev-Deploy:
+    name: Dev-Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: FTP-Deploy-Action
+      uses: SamKirkland/FTP-Deploy-Action@3.1.1
+      with:
+        local-dir: wwwroot/
+        ftp-server: ftp://ftp.apps.nigelgoss.co.uk/minesweeper/dev/
+        ftp-username: apps.nigelgoss.co.uk
+        ftp-password: ${{ secrets.FTP_PASSWORD }}:
+  
   Unit-Tests:
     runs-on: ubuntu-latest
+    needs: [ Dev-Deploy ]
     steps:
 
       - name: Checkout source code
@@ -25,8 +39,8 @@ jobs:
       - name: npm test
         run: npm test
 
-  FTP-Deploy:
-    name: FTP-Deploy
+  Prod-Deploy:
+    name: Prod-Deploy
     needs: [ Unit-Tests ]
     runs-on: ubuntu-latest
     steps:
@@ -35,6 +49,6 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@3.1.1
       with:
         local-dir: wwwroot/
-        ftp-server: ftp://ftp.apps.nigelgoss.co.uk/minesweeper/
+        ftp-server: ftp://ftp.apps.nigelgoss.co.uk/minesweeper/prod/
         ftp-username: apps.nigelgoss.co.uk
         ftp-password: ${{ secrets.FTP_PASSWORD }}
