--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
     "test": "jest"
   },
   "devDependencies": {
-    "jest": "^25.1.0",
-    "puppeteer": "^2.1.1",
-    "jest-puppeteer": "^4.4.0",
-    "pixelmatch": "^5.1.0"
+    "jest": "*",
+    "puppeteer": "*",
+    "jest-puppeteer": "*"
   }
 }
