--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
           command: npm run test
 orbs:
-  node: 'circleci/node:x.y'
+  node: 'circleci/node:latest'
 version: 2.1
 workflows:
   test_my_app:
