--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,8 @@
-jobs:
-  test:
-    executor:
-      name: node/default
-      tag: '13'
-    steps:
-      - checkout
-      - node/install-packages
-      - run:
-          command: npm run test
-orbs:
-  node: 'circleci/node:latest'
 version: 2.1
-workflows:
-  test_my_app:
-    jobs:
-      - test
+jobs:
+  build:
+    docker: 
+      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+    steps:
+      - checkout # check out the code in the project directory
+      - run: echo "hello world" # run the `echo` command
