--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,17 @@
-version: 2.1
 jobs:
-  build:
-    docker: 
-      - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
+  test:
+    executor:
+      name: node/default
+      tag: '13'
     steps:
-      - checkout # check out the code in the project directory
+      - checkout
       - node/install-packages
       - run:
           command: npm run test
-      - run: echo "hello world" # run the `echo` command
+orbs:
+  node: 'circleci/node:4.8.2'
+version: 2.1
+workflows:
+  test_my_app:
+    jobs:
+      - test
